--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,7 +24,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-1, disable
+monitor = DP-1, disabled
 monitor = eDP-1, preferred,0x0, 1.6
 monitor = DP-2, preferred, 1600x0, 1.25
 
@@ -37,7 +37,8 @@ monitor = DP-2, preferred, 1600x0, 1.25
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+# $fileManager = dolphin
+$fileMnaager = yazi
 $menu = wofi --show drun
 
 
@@ -47,14 +48,18 @@ $menu = wofi --show drun
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
-
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar
+# exec-once = hyprpanel
+exec-once = ~/.cache/wal/colors.sh
 exec-once = swww-daemon
 exec-once = ~/.config/hypr/set_wallpaper.sh
 exec-once = hyprlock --daemonize
+exec-once = firefox
+exec-once = wal -R
+exec-once = sleep 1 && waybar
+
 
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"
@@ -75,7 +80,7 @@ env = GTK_THEME, adw-gtk3-dark
 env = GTK_APPLICATION_PREFER_DARK_THEME,1
 env = QT_QPA_PLATFORMTHEME, qt5ct
 env = QT_STYLE_ORVERRIDE, Kvantum
-env = QT_QPA_PLATFORMTHEME, qt6ct
+env = QT_QPA_PLATFORMTHEME, qt6ct 
 
 
 ###################
@@ -127,10 +132,11 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.95
+    inactive_opacity = 0.9
 
     shadow {
+
         enabled = true
         range = 4
         render_power = 3
@@ -150,7 +156,6 @@ decoration {
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = yes, please :)
-
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = easeOutQuint,0.23,1,0.32,1
@@ -241,8 +246,8 @@ gestures {
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+    name = logitech-usb-receiver
+    sensitivity = -0.95
 }
 
 
@@ -253,19 +258,32 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+#lock screen bind
 bind = $mainMod, L, exec, hyprlock
 
+
+#open wofi to change wallpapers and theme
+bind = $mainMod SHIFT, W, exec, sh ~/scripts/change_wallpaper.sh
+
+
+#task manager
+bind = CTRL SHIFT, ESCAPE, exec, missioncenter
+
+bind = $mainMod, W, exec, wlogout
+
+#browser
+bind = $mainMod, Q, exec, firefox
 # screenshot binds
 bind = $mainMod CTRL SHIFT, S, exec, sh -c 'grim -c -g "$(slurp)" - | wl-copy'
 bind = $mainMod CTRL SHIFT ALT, S,exec, sh -c 'grim -c -g "$(slurp)" ~/Pictures/Screenshots/Screenshot-$(date +%F_%H-%M-%S).png'
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, kitty -e ~/scripts/yazi-wal.sh
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
