--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,25 +1,137 @@
-general {
+# sample hyprlock.conf
+# for more configuration options, refer https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock
+#
+# rendered text in all widgets supports pango markup (e.g. <b> or <i> tags)
+# ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#general-remarks
+#
+# shortcuts to clear password buffer: ESC, Ctrl+U, Ctrl+Backspace
+#
+# you can get started by copying this config to ~/.config/hypr/hyprlock.conf
+#
 
-	grace = 1
-	no_fade_in = false
+$font = SF Pro Display
+
+general {
+    no_fade_in = true
+    no_fade_out = true
+    hide_cursor = false
+    grace = 0
+    disable_loading_bar = true
 }
 
+# uncomment to enable fingerprint authentication
+# auth {
+#     fingerprint {
+#         enabled = true
+#         ready_message = Scan fingerprint to unlock
+#         present_message = Scanning...
+#         retry_delay = 250 # in milliseconds
+#     }
+# }
+
+animations {
+    enabled = true
+    bezier = linear, 1, 1, 0, 0
+    animation = fadeIn, 1, 5, linear
+    animation = fadeOut, 1, 5, linear
+    animation = inputFieldDots, 1, 2, linear
+}
 
 background {
-
-	path = ~/Pictures/wallpapers/wall.png
-	blur = true
+    monitor =
+    #path = /home/alvin/Pictures/wallpapers/20.jpg
+    path = /home/alvin/Pictures/wallpapers/20.jpg
+    #color = $background
+    blur_passes = 2
+    contrast = 1
+    brightness = 0.5
+    vibrancy = 0.2
+    vibrancy_darkness = 0.2
 }
 
+#input-field {
+#    monitor =
+#    size = 20%, 5%
+#    outline_thickness = 3
+#    inner_color = rgba(0, 0, 0, 0.0) # no fill
+#
+#    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
+#    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
+#    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
+#
+#    font_color = rgb(143, 143, 143)
+#    fade_on_empty = false
+#    rounding = 15
+#
+#    font_family = $font
+#    placeholder_text = Input password...
+#    fail_text = $PAMFAIL
+#
+#    # uncomment to use a letter instead of a dot to indicate the typed password
+#    # dots_text_format = *
+#    # dots_size = 0.4
+#    dots_spacing = 0.3
+#
+#    # uncomment to use an input indicator that does not show the password length (similar to swaylock's input indicator)
+#    # hide_input = true
+#
+#    position = 0, -20
+#    halign = center
+#    valign = center
+#}
+#
 
 input-field {
-
-	monitor = DP-2
-	size = 200, 50
-	position =  0, 0
-	halign = center
-	valign = center
-	outline_thickness = 2
-	dots_size = 0.2
-	fade_on_empty = true
+    monitor =
+    size = 250, 60
+    outline_thickness = 2
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    outer_color = rgba(242, 243, 244, 0.75)
+    inner_color = rgba(0, 0, 0, 0.2)
+    font_color = rgba(242,243,244, 0.75)
+    fade_on_empty = false
+    rounding = -1
+    check_color = rgb(242, 243, 244)
+    placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
+    hide_input = false
+    position = 0, -200
+    halign = center
+    valign = center
 }
+
+# TIME
+label {
+    monitor = 
+    text = cmd[update:1000] echo "$(date +"%-I:%M")"
+    color = rgba(242, 243, 244, 0.75)
+    font_size = 95
+    font_family = SF Pro Display Bold
+    position = 0, 200
+    halign = center
+    valign = center
+}
+
+# DATE
+label {
+  monitor =
+  text = cmd[update:1000] echo "$(date +"%A, %B %d")"
+  color = rgba(242, 243, 244, 0.75)
+  font_size = 22
+  font_family = $font
+  position = 0, 300
+  halign = center
+  valign = center
+}
+
+#label {
+#    monitor =
+#    text = $LAYOUT[en,ru]
+#    font_size = 24
+#    onclick = hyprctl switchxkblayout all next
+#
+#    position = 250, -20
+#    halign = center
+#    valign = center
+#}
